--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -85,7 +85,8 @@ unbind Enter
 # STATUS
 
 set -g status-style fg=black,bg=default
-# set -g status-left "#[fg=#add8e6]#[bg=#21252f]█ #S #[bg=black] "
+# set -g status-left "#[fg=#add8e6]#[bg=#21252f] #S #[bg=black] "
+# set -g status-left "#[fg=#f38ba8]#[bg=#281d29] #S #[bg=black] "
 # set -g status-left "#[fg=#f38ba8] #S "
 set -g status-left "#[fg=#add8e6] #S "
 # set -g status-left "#[fg=#dce0e8] #S "
@@ -93,9 +94,6 @@ set -g status-left "#[fg=#add8e6] #S "
 set -g status-right                 "#[fg=#add8e6]%H:%M"
 set -g window-status-current-format "#[fg=#f9e2af]**#[fg=#add8e6]#[bold]#{?#{==:#W,zsh},#(echo '#{pane_current_command}'),#W}"
 set -g window-status-format         "#{?#{==:#W,zsh},#[fg=#313244]#I:#(echo '#{pane_current_command}'),#[fg=#f9e2af]*#[fg=#cba6f7]#W}"
-# set -g window-status-format "#I:#[fg=#ffffff]#W#[fg=#777777]#{?window_actovity_flag,#W,}"
-# set -g window-status-format "#[fg=#f9e2af]*#[fg=#cba6f7]#{?#{==:#W,zsh},#(echo '#{pane_current_command}'),#W}"
-# set -g window-status-format "#{?window_actovity_flag,#[fg=#cba6f7],*}"
 # set -g window-status-format '#{?window_bell_flag,#[bg=red],}#{?window_last_flag,#[bg=darkgreen],}#{?window_flags,#I,#[fg=white]#I#[fg=default]#[fg=white]}#W#{?window_flags, ,}#{?window_active,󰎂 ,}#{?window_last_flag, ,}#{?window_marked_flag,󰃃 ,}#{?window_activity_flag, ,}#{?window_bell_flag, ,}#{?window_silence_flag,󰝟 ,}#{?window_zoomed_flag,󰨤 ,}#[fg=default]'
 
 #───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
