--- a/otter-launcher/config.toml
+++ b/otter-launcher/config.toml
@@ -61,7 +61,7 @@ find "$HOME/.local/share/applications" -name "*.desktop" 2>/dev/null
 find /var/lib/flatpak/exports/share/applications -name "*.desktop" 2>/dev/null
 find "$HOME/.local/share/flatpak/exports/share/applications" -name "*.desktop" 2>/dev/null
 }
-selected                     ="$(desktop_file | sed 's/.desktop$//g' | sort | fzf -m -d / --with-nth -1 --reverse --padding 1,3 --prompt 'Launch Apps: ')"
+selected="$(desktop_file | sed 's/.desktop$//g' | sort | fzf -m -d / --with-nth -1 --reverse --padding 1,3 --prompt 'Launch Apps: ')"
 [ -z "$selected" ] && exit
 echo "$selected" | while read -r line ; do setsid -f gtk-launch "$(basename $line)"; done
 """
@@ -72,9 +72,9 @@ description                  = "scripts"
 prefix                       = "sh"
 cmd                          = """
 script() {
-find $HOME/.local/share/bin/ -not -name ".git" 2>/dev/null
+ls $HOME/.local/share/bin/ 2>/dev/null
 }
-selected                     ="$(script | sort | fzf -m -d / --with-nth -1 --reverse --padding 1,3 --prompt 'Launch Scripts: ')"
+selected="$(script | sort | fzf -m -d / --with-nth -1 --reverse --padding 1,3 --prompt 'Launch Scripts: ')"
 [ -z "$selected" ] && exit
 echo "$selected" | while read -r line ; do setsid -f gtk-launch "$(basename $line)"; done
 """
