--- a/hypr/keymaps/launch.conf
+++ b/hypr/keymaps/launch.conf
@@ -25,7 +25,8 @@ bind         = $mainMod ALT,   Return, exec, [float; size 740 380: center]   $te
 bind         = $mainMod,       C,      exec, pkill -x rofi || $scrPath/cpu m
 # bind         = $mainMod,       minus,  exec, pkill -x rofi || $scrPath/cpu.sh -d
 # bind         = $mainMod,       equal,  exec, pkill -x rofi || $scrPath/cpu.sh -i
-bind         = $mainMod,       S,      exec, pkill -x rofi || $scrPath/shaders
+# bind         = $mainMod,       S,      exec, pkill -x rofi || $scrPath/shaders
+bind         = $mainMod,       S,      exec, pkill -x rofi || $scrPath/scripts
 bind         = $mainMod,       Y,      exec, pkill -x rofi || $scrPath/cliphist c
 bind         = $mainMod,       P,      exec, pkill -x rofi || $scrPath/hyprpicker
 # bind         = $mainMod,       A,      exec, pkill -x rofi || $scrPath/rofilaunch.sh d
