--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -65,6 +65,8 @@ bind -T copy-mode-v  "y"   send -X copy-selection-and-cancel
 
 bind -n M-h select-window -t:-1
 bind -n M-l select-window -t:+1
+bind -n C-f display-popup
+bind -n C-h display-popup
 bind -r C   new-window -c "#{pane_current_path}"
 
 #───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
