--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -65,7 +65,7 @@ bind -T copy-mode-v  "y"   send -X copy-selection-and-cancel
 
 bind -n M-h select-window -t:-1
 bind -n M-l select-window -t:+1
-bind -n M-p display-popup -h 80% -w 80%
+bind -n C-e display-popup -h 70% -w 70%
 bind -r C   new-window -c "#{pane_current_path}"
 
 #───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
