--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -31,6 +31,7 @@ set-option -g allow-rename     on
 set-option -g status-position  top
 set-option status on
 # set-option status off
+# set-option status
 set               -g  base-index       1
 set               -g  pane-base-index  1
 set-window-option -g  pane-base-index  1
@@ -92,7 +93,7 @@ set -g status-style fg=black,bg=default
 set -g status-left "#[fg=#add8e6] #S "
 # set -g status-left "#[fg=#dce0e8] #S "
 # set -g status-right "#[fg=#add8e6] █ █ █"
-set -g status-right                 "#[fg=#add8e6]%H:%M"
+set -g status-right                 "#[fg=#add8e6]#(nmcli -t -f NAME c s -a | grep -m 1)#(acpi -b | grep -m 1 -oP '\\d+%' | tr -d '%')  %H:%M"
 set -g window-status-current-format "#[fg=#f9e2af]**#[fg=#add8e6]#[bold]#{?#{==:#W,zsh},#(echo '#{pane_current_command}'),#W}"
 set -g window-status-format         "#{?#{==:#W,zsh},#[fg=#313244]#I:#(echo '#{pane_current_command}'),#[fg=#f9e2af]*#[fg=#cba6f7]#W}"
 # set -g window-status-format '#{?window_bell_flag,#[bg=red],}#{?window_last_flag,#[bg=darkgreen],}#{?window_flags,#I,#[fg=white]#I#[fg=default]#[fg=white]}#W#{?window_flags, ,}#{?window_active,󰎂 ,}#{?window_last_flag, ,}#{?window_marked_flag,󰃃 ,}#{?window_activity_flag, ,}#{?window_bell_flag, ,}#{?window_silence_flag,󰝟 ,}#{?window_zoomed_flag,󰨤 ,}#[fg=default]'
