--- a/hypr/themes/theme.conf
+++ b/hypr/themes/theme.conf
@@ -62,8 +62,8 @@ decoration {
                 enabled                       = false
         }
         blur {
-                enabled                       = false
-                passes                        = 6
+                enabled                       = true
+                passes                        = 4
                 size                          = 1
                 new_optimizations             = false
                 xray                          = false
