--- a/nvim/.luarc.jsonc
+++ b/nvim/.luarc.jsonc
@@ -4,7 +4,8 @@
                 "$VIMRUNTIME/lua",
                 // "$XDG_DATA_HOME/nvim/lazy/dropbar.nvim",
                 // "$XDG_DATA_HOME/nvim/lazy/blink.nvim",
-                "$XDG_DATA_HOME/nvim/lazy/nvim-ufo",
+                // "$XDG_DATA_HOME/nvim/lazy/tiny-code-action.nvim",
+                // "$XDG_DATA_HOME/nvim/lazy/nvim-ufo",
                 // "$XDG_DATA_HOME/nvim/lazy/nvim-treesitter",
                 "${3rd}/luv/library"
         ],
