--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -95,7 +95,7 @@ set -g status-left "#[fg=#add8e6] #S "
 # set -g status-right "#[fg=#add8e6] █ █ █"
 # set -g status-right "#[align=absolute-centre]#[fg=#add8e6]#(iwgetid -r)  #(acpi -b | grep -m 1 -oP '\\d+%' | tr -d '%')#[align=right] %H:%M"
 # set -g status-right "#[align=absolute-centre]#[fg=#f38ba8]#(~/.config/waybar/scripts/recording)#[fg=#add8e6]#(~/.config/tmux/scripts/language)#(~/.local/share/bin/systemupdate | jq -r '.text')#[align=right]#(acpi -b | grep -m 1 -oP '\\d+%' | tr -d '%') %H:%M"
-set -g status-right "#[fg=#add8e6]  %H:%M  #[bg=#21252f]#(~/.config/tmux/scripts/brightness)#[bg=black] #[bg=#21252f]#(~/.config/tmux/scripts/volume)#[bg=black] #(~/.config/tmux/scripts/battery)#[bg=black] #[fg=#f38ba8]#(~/.local/share/bin/recording)#[fg=#add8e6]#(~/.config/tmux/scripts/language)"
+set -g status-right "#[fg=#add8e6]  %H:%M  #[bg=#21252f]#(~/.config/tmux/scripts/brightness)#[bg=black] #[bg=#21252f]#(~/.config/tmux/scripts/volume)#[bg=black] #(~/.config/tmux/scripts/battery)#[bg=black] #[fg=#add8e6]#(~/.config/tmux/scripts/language)#[fg=#f38ba8]#(~/.local/share/bin/recording)"
 #(~/.local/share/bin/systemupdate | jq -r '.text')"
 set -g window-status-current-format "#[fg=#f9e2af]**#[fg=#add8e6]#[bold]#{?#{==:#W,zsh},#(echo '#{pane_current_command}'),#W}"
 set -g window-status-format         "#{?#{==:#W,zsh},#[fg=#313244]#I:#(echo '#{pane_current_command}'),#[fg=#f9e2af]*#[fg=#cba6f7]#W}"
