--- a/waybar/top.jsonc
+++ b/waybar/top.jsonc
@@ -72,6 +72,9 @@
                         "custom/separators",
                         "pulseaudio#icon",
                         "pulseaudio",
+                        "privacy",
+                        // "hyprland/window",
+                        // "mpris",
                         // "cava",
                         // "custom/media",
                         ""
@@ -80,11 +83,11 @@
                         // "clock",
                         "hyprland/submap",
                         // "custom/separators",
-                        "custom/recording",
                         "hyprland/language",
                         // "custom/separators",
                         "custom/updates",
                         // "hyprland/workspaces",
+                        "custom/recording",
                         ""
                 ],
                 "modules-right": [
@@ -100,8 +103,10 @@
                         "cpu",
                         "memory#icon",
                         "memory",
-                        "custom/cpuinfo#icon",
-                        "custom/cpuinfo",
+                        // "custom/cpuinfo#icon",
+                        // "custom/cpuinfo",
+                        "temperature#icon",
+                        "temperature",
                         "custom/gpuinfo#icon",
                         "custom/gpuinfo",
                         "battery#icon",
@@ -182,6 +187,17 @@
                         ],
                         "actions": {
                                 "on-click-right": "mode"
+                        }
+                },
+                "mpris": {
+                        "format": "{player_icon} [{player}] {title} - {artist}",
+                        "format-paused": "{status_icon} <i>{dynamic}</i>",
+                        "player-icons": {
+                                "default": "▶",
+                                "mpv": "🎵"
+                        },
+                        "status-icons": {
+                                "paused": "⏸"
                         }
                 },
                 "custom/media": {
@@ -348,23 +364,23 @@
                         "min-length": 1,
                         "max-length": 6
                 },
-                "custom/cpuinfo#icon": {
-                        "format": "",
-                        "tooltip": false,
-                        "interval": 5,
-                        "min-length": 1,
-                        "max-length": 10
+
+                //──────────────────────────────────────────────────────────────────────────────────────────────────────
+                // CPU TEMPERATURE
+
+                "temperature#icon": {
+                        "hwmon-path": "/sys/devices/pci0000:00/0000:00:18.3/hwmon/hwmon3/temp1_input",
+                        "critical-treshold": 40,
+                        "interval": 1,
+                        "format": ""
                 },
-                "custom/cpuinfo": {
-                        "exec": "$HOME/.local/share/bin/cpuinfo",
-                        "return-type": "json",
-                        "format": "{}",
-                        "on-click": "$HOME/.local/share/bin/cpu",
-                        "tooltip": true,
-                        "interval": 5,
-                        "min-length": 4,
-                        "max-length": 8
+                "temperature": {
+                        "hwmon-path": "/sys/devices/pci0000:00/0000:00:18.3/hwmon/hwmon3/temp1_input",
+                        "critical-treshold": 40,
+                        "interval": 1,
+                        "format": "{temperatureC}°C"
                 },
+
                 "custom/gpuinfo#icon": {
                         "format": "󰢮",
                         "tooltip": false,
